# stepad

./: README.md  dimensino notes.txt  lekker_switch_notes.txt
KiCad/stepad/: .gitignore  custom_library.bak  custom_library.kicad_sym  fp-info-cache  fp-lib-table  stepad.csv  stepad.kicad_pcb  stepad.kicad_prl  stepad.kicad_pro  stepad.kicad_sch  stepad.kicad_sch-bak  stepad.xml  sym-lib-table
KiCad/stepad/gerbers/: stepad-B_Cu.gbl  stepad-B_Mask.gbs  stepad-B_Paste.gbp  stepad-B_Silkscreen.gbo  stepad-Edge_Cuts.gm1  stepad-F_Cu.gtl  stepad-F_Mask.gts  stepad-F_Paste.gtp  stepad-F_Silkscreen.gto  stepad-NPTH-drl_map.gbr  stepad-NPTH.drl  stepad-PTH-drl_map.gbr  stepad-PTH.drl
KiCad/stepad/libraries/: SamacSys_Parts.dcm  SamacSys_Parts.lib
KiCad/stepad/libraries/SamacSys_Parts.3dshapes/: AH49FNTR-G1.stp
KiCad/stepad/libraries/SamacSys_Parts.pretty/: NE555DR.kicad_mod  SOP50P640X120-38N.kicad_mod  SOT95P280X145-5N.kicad_mod  SOT95P285X130-3N.kicad_mod
KiCad/stepad/scripts/: bom_generator.py
case/: bottom.dxf  combined2.dxf  combined2.dxf~  combined3.dxf  open1.dxf  open1_1.dxf  open1_2.dxf  open2.dxf  open2_1.dxf  open3.dxf  plate.dxf
firmware/: .gitignore  CMakeLists.txt  Readme.md
firmware/app/: CMakeLists.txt  Kconfig  prj.conf
firmware/app/boards/arm/stepad/: Kconfig.board  Kconfig.defconfig  stepad-pinctrl.dtsi  stepad.dts  stepad_defconfig
firmware/app/src/: main.c
firmware/boards/: stepad.h
firmware/inc/: console.h  digital_switch.h  interface_hid.h  keycodes.h  keymap.h  led_effects.h  led_matrix.h  lekker_switch.h  parameters.h  settings.h  switch.h  tusb_config.h  usb_descriptors.h  usb_hid.h  utility_colors.h  version.h
firmware/scripts/: hid_test.py  plot_data.py  set_settings.py  test_algorithms.py  test_inout_interface.py
firmware/src/: console.c  digital_switch.c  interface_hid.c  keymap.c  led_effects.c  led_matrix.c  lekker_switch.c  main.c  settings.c  switch.c  usb_descriptors.c  usb_hid.c
(+5 files in other folders)
